--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,3 @@
 main:
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
-  - title: "About"
+  - title: "Rólunk"
     url: /about/
