feat: add new article to the Docker sidebar

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -25,3 +25,5 @@ docker:
         url: /_pages/topics/docker/networks/
       - title: 'Volumes'
         url: /_pages/topics/docker/volumes/
+      - title: 'FAQ'
+        url: /_pages/topics/docker/faq/
